--- a/index.html
+++ b/index.html
@@ -291,17 +291,17 @@
 
         <div class="reviews">
             <div class="review">
-                <b>Айдос К. · Алматы</b>
+                <b>Елена Русу. · Кагул</b>
                 <div class="stars">★★★★★</div>
                 <div>Всё объяснили и помогли с оформлением. Работаю второй месяц.</div>
             </div>
             <div class="review">
-                <b>Жанна С. · Астана</b>
+                <b>Малика Юсупова. · Самарканд</b>
                 <div class="stars">★★★★☆</div>
                 <div>Всегда были на связи, сопровождение отличное.</div>
             </div>
             <div class="review">
-                <b>Нурбол Т. · Шымкент</b>
+                <b>Улан Асанов. · Бишкек</b>
                 <div class="stars">★★★★★</div>
                 <div>Честные условия и быстрая помощь после прилёта.</div>
             </div>
