--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
 
     <script>
         const MANAGER = {
-            name: "Владимир Рубин",
+            name: "Тимур",
             role: "Менеджер по подбору персонала",
-            whatsapp: "447856298461",
-            telegram: "alexchernyshev08"
+            whatsapp: "447547320274",
+            telegram: "great_jobs_manager"
         };
 
         const wa = document.getElementById("wa");
