--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             name: "Тимур",
             role: "Менеджер по подбору персонала",
             whatsapp: "447547320274",
-            telegram: "great_jobs_manager"
+            telegram: "greatjobs_manager"
         };
 
         const wa = document.getElementById("wa");
