--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
 
     <script>
         const MANAGER = {
-            name: "Тимур",
+            name: "Мурат",
             role: "Менеджер по подбору персонала",
-            whatsapp: "447547320274",
-            telegram: "greatjobs_manager"
+            whatsapp: "447490930013",
+            telegram: "yazagul"
         };
 
         const wa = document.getElementById("wa");
