--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
 
     <script>
         const MANAGER = {
-            name: "Руслан",
+            name: "Алексей Соколов",
             role: "Менеджер по подбору персонала",
-            whatsapp: "447541049493",
-            telegram: "ukbritejobs"
+            whatsapp: "447871715204",
+            telegram: "Join_uk_job"
         };
 
         const wa = document.getElementById("wa");
