--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
 
     <script>
         const MANAGER = {
-            name: "Мурат",
+            name: "Тимур",
             role: "Менеджер по подбору персонала",
-            whatsapp: "447783555240",
-            telegram: "yazagul"
+            whatsapp: "447520639435",
+            telegram: "great_jobs_manager"
         };
 
         const wa = document.getElementById("wa");
