--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             name: "Кирилл Вологдин",
             role: "Менеджер по подбору персонала",
             whatsapp: "447526208400",
-            telegram: "ukbritejobs"
+            telegram: "kirillgreatjobs"
         };
 
         const wa = document.getElementById("wa");
